Fix compile errors
Signed-off-by: Gerben Kroes <gerben@kroesctrl.nl>