@@ -14,6 +14,7 @@ import static org.springframework.ws.test.server.RequestCreators.withSoapEnvelop
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
+import java.util.Collections;
 import java.util.Date;
 import java.util.Iterator;
 import java.util.List;
@@ -307,7 +308,7 @@ public class SoapServiceSecretManagementIT {
     final List<DbEncryptedSecret> authKeys =
         this.secretRepository.findSecrets(
             DEVICE_IDENTIFICATION,
-            List.of(SecretType.E_METER_AUTHENTICATION_KEY),
+            Collections.singletonList(SecretType.E_METER_AUTHENTICATION_KEY),
             SecretStatus.NEW);
     assertThat(authKeys).hasSize(1);
     final DbEncryptedSecret authKey = authKeys.get(0);
